:heavy_check_mark: Сборка #18

--- a/18/form.html
+++ b/18/form.html
@@ -27,10 +27,10 @@
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <svg class="svg-icon svg-icon__menu-open" width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-menu-open" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+            <use xlink:href="img/sprite.svg#icon-menu-open"></use>
           </svg>
           <svg class="svg-icon svg-icon__menu-close" width="21" height="20">
-            <use xlink:href="img/sprite.svg#icon-menu-close" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+            <use xlink:href="img/sprite.svg#icon-menu-close"></use>
           </svg>
         </button>
         <ul class="menu__list menu__list--catalog-order">
@@ -75,9 +75,11 @@
 
     <div class="form__title-page">
       <p class="form__page-text">Вязание на заказ</p>
-      <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
-        <use xlink:href="img/sprite.svg#icon-zig-zag" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-      </svg>
+      <div class="form__zigzag-icon">
+        <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
+          <use xlink:href="img/sprite.svg#icon-zig-zag"></use>
+        </svg>
+      </div>
     </div>
 
     <!-- Секция формы заказа -->
@@ -193,22 +195,21 @@
           <li class="social__item">
             <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм">
               <svg class="svg-icon svg-icon__instagram" width="22" height="21">
-                <use xlink:href="img/sprite.svg#icon-instagram" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-instagram"></use>
               </svg>
-              <!-- <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21"> -->
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
               <svg class="svg-icon svg-icon__facebook" width="15" height="28">
-                <use xlink:href="img/sprite.svg#icon-facebook" xmlns:xlink="http://www.w3.org/1999/xlink" ></use>
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#" aria-label="Твитер">
               <svg class="svg-icon svg-icon__twitter" width="23" height="20">
-                <use xlink:href="img/sprite.svg#icon-twitter" xmlns:xlink="http://www.w3.org/1999/xlink" ></use>
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -218,9 +219,11 @@
       <div class="footer__copyright">
         <b class="footer__copyright-text">Разработано</b>
         <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg class="svg-icon svg-icon__academy" width="27" height="34">
-            <use xlink:href="img/sprite.svg#icon-academy" xmlns:xlink="http://www.w3.org/1999/xlink" ></use>
-          </svg>
+          <div class="footer__academy-icon">
+            <svg class="svg-icon svg-icon__academy" width="27" height="34">
+              <use xlink:href="img/sprite.svg#icon-academy"></use>
+            </svg>
+          </div>
         </a>
       </div>
     </div>
