--- a/18/index.html
+++ b/18/index.html
@@ -27,10 +27,10 @@
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <svg class="svg-icon svg-icon__menu-open" width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-menu-open" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+            <use xlink:href="img/sprite.svg#icon-menu-open"></use>
           </svg>
           <svg class="svg-icon svg-icon__menu-close" width="21" height="20">
-            <use xlink:href="img/sprite.svg#icon-menu-close" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+            <use xlink:href="img/sprite.svg#icon-menu-close"></use>
           </svg>
         </button>
         <ul class="menu__list menu__list--catalog-order">
@@ -84,7 +84,7 @@
             <p class="handwork__category">Предметы интерьера</p>
             <div class="handwork__image-interior handwork__image--active">
               <svg class="svg-icon svg-icon__interior" width="40" height="62">
-                <use xlink:href="img/sprite.svg#icon-interior" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-interior"></use>
               </svg>
             </div>
           </div>
@@ -94,15 +94,17 @@
             <p class="handwork__category">Детские игрушки</p>
             <div class="handwork__image-toys handwork__image--active">
               <svg class="svg-icon svg-icon__toy" width="60" height="60">
-                <use xlink:href="img/sprite.svg#icon-toy" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-toy"></use>
               </svg>
             </div>
           </div>
         </a>
       </div>
-      <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
-        <use xlink:href="img/sprite.svg#icon-zig-zag" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-      </svg>
+      <div class="handwork__zigzag-icon">
+        <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
+          <use xlink:href="img/sprite.svg#icon-zig-zag"></use>
+        </svg>
+      </div>
     </section>
 
     <!-- Секция вязаных корзинок -->
@@ -166,9 +168,11 @@
           </div>
         </div>
       </div>
-      <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
-        <use xlink:href="img/sprite.svg#icon-zigzag-line" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-      </svg>
+      <div class="baskets__line-icon">
+        <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
+          <use xlink:href="img/sprite.svg#icon-zigzag-line" ></use>
+        </svg>
+      </div>
     </section>
 
     <!-- Секция о нас -->
@@ -179,37 +183,37 @@
           <ul class="about-us__list">
             <li class="about-us__item about-us__item--eco">
               <svg class="svg-icon svg-icon--brand" width="32" height="37">
-                <use xlink:href="img/sprite.svg#icon-flower" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-flower"></use>
               </svg>
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
               <svg class="svg-icon svg-icon--brand" width="47" height="27">
-                <use xlink:href="img/sprite.svg#icon-money" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-money"></use>
               </svg>
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
               <svg class="svg-icon svg-icon--brand" width="34" height="27">
-                <use xlink:href="img/sprite.svg#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
               </svg>
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item--love">
               <svg class="svg-icon svg-icon--brand" width="35" height="34">
-                <use xlink:href="img/sprite.svg#icon-ball" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-ball"></use>
               </svg>
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
               <svg class="svg-icon svg-icon--brand" width="55" height="23">
-                <use xlink:href="img/sprite.svg#icon-rocket" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-rocket"></use>
               </svg>
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
               <svg class="svg-icon svg-icon--brand" width="33" height="32">
-                <use xlink:href="img/sprite.svg#icon-gift" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-gift"></use>
               </svg>
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
@@ -237,12 +241,12 @@
             <div class="reviews__slide">
               <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">
                 <svg class="svg-icon svg-icon__prev" width="50" height="26">
-                  <use xlink:href="img/sprite.svg#icon-prev" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                  <use xlink:href="img/sprite.svg#icon-prev"></use>
                 </svg>
               </button>
               <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">
                 <svg class="svg-icon svg-icon__next" width="50" height="26">
-                  <use xlink:href="img/sprite.svg#icon-next" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                  <use xlink:href="img/sprite.svg#icon-next"></use>
                 </svg>
               </button>
             </div>
@@ -252,9 +256,11 @@
           </form>
         </div>
       </div>
-      <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
-        <use xlink:href="img/sprite.svg#icon-zigzag-line" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-      </svg>
+      <div class="reviews__line-icon">
+        <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
+          <use xlink:href="img/sprite.svg#icon-zigzag-line"></use>
+        </svg>
+      </div>
     </section>
 
     <!-- Секция контактов -->
@@ -292,9 +298,11 @@
               <img class="" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg"
                 alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
             </picture>
-            <svg class="svg-icon svg-icon_pin" width="100" height="67">
-              <use xlink:href="img/sprite.svg#icon-pin" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-            </svg>
+            <div class="contacts__map-pin">
+              <svg class="svg-icon svg-icon__pin" width="100" height="67">
+                <use xlink:href="img/sprite.svg#icon-pin"></use>
+              </svg>
+            </div>
           </div>
           <form action="mailto:info@mimimishkashop.ru">
             <button class="contacts__btn button" type="submit">Напишите нам</button>
@@ -316,21 +324,21 @@
           <li class="social__item">
             <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм">
               <svg class="svg-icon svg-icon__instagram" width="22" height="21">
-                <use xlink:href="img/sprite.svg#icon-instagram" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
               <svg class="svg-icon svg-icon__facebook" width="15" height="28">
-                <use xlink:href="img/sprite.svg#icon-facebook" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#" aria-label="Твитер">
               <svg class="svg-icon svg-icon__twitter" width="23" height="20">
-                <use xlink:href="img/sprite.svg#icon-twitter" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -340,9 +348,11 @@
       <div class="footer__copyright">
         <b class="footer__copyright-text">Разработано</b>
         <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg class="svg-icon svg-icon__academy" width="27" height="34">
-            <use xlink:href="img/sprite.svg#icon-academy" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-          </svg>
+          <div class="footer__academy-icon">
+            <svg class="svg-icon svg-icon__academy" width="27" height="34">
+              <use xlink:href="img/sprite.svg#icon-academy"></use>
+            </svg>
+          </div>
         </a>
       </div>
     </div>
