fixes href in footer, creates new menu button, fixes handwork svg

--- a/source/form.html
+++ b/source/form.html
@@ -25,11 +25,10 @@
           </picture>
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
-          <svg class="svg-icon svg-icon__menu-open" width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-menu-open"></use>
-          </svg>
-          <svg class="svg-icon svg-icon__menu-close" width="21" height="20">
-            <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+          <svg class="menu__btn-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
+            <rect class="menu__line-one" fill="#231F20" width="19.958" height="2"/>
+            <rect class="menu__line-two" y="6" fill="#231F20" width="19.958" height="2"/>
+            <rect class="menu__line-three" y="12" fill="#231F20" width="19.958" height="2"/>
           </svg>
         </button>
         <ul class="menu__list menu__list--catalog-order">
@@ -187,7 +186,7 @@
   <footer class="footer">
     <div class="footer__inner">
       <a class="footer__logo-link">
-        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+        <img class="footer__logo" src="img/logo-footer.svg" href="index.html" alt="Логотип Мишка">
       </a>
       <div class="footer__social social">
         <ul class="social__list">
