--- a/source/index.html
+++ b/source/index.html
@@ -25,11 +25,10 @@
           </picture>
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
-          <svg class="svg-icon svg-icon__menu-open" width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-menu-open"></use>
-          </svg>
-          <svg class="svg-icon svg-icon__menu-close" width="21" height="20">
-            <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+          <svg class="menu__btn-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
+            <rect class="menu__line-one" fill="#231F20" width="19.958" height="2"/>
+            <rect class="menu__line-two" y="6" fill="#231F20" width="19.958" height="2"/>
+            <rect class="menu__line-three" y="12" fill="#231F20" width="19.958" height="2"/>
           </svg>
         </button>
         <ul class="menu__list menu__list--catalog-order">
@@ -81,7 +80,7 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner handwork__flex--g">
             <p class="handwork__category">Предметы интерьера</p>
-            <div class="handwork__image-interior handwork__image--active">
+            <div class="handwork__icon handwork__icon--position handwork__image--active">
               <svg class="svg-icon svg-icon__interior" width="40" height="62">
                 <use xlink:href="img/sprite.svg#icon-interior"></use>
               </svg>
@@ -91,7 +90,7 @@
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex--g">
             <p class="handwork__category">Детские игрушки</p>
-            <div class="handwork__image-toys handwork__image--active">
+            <div class="handwork__icon handwork__image--active">
               <svg class="svg-icon svg-icon__toy" width="60" height="60">
                 <use xlink:href="img/sprite.svg#icon-toy"></use>
               </svg>
