--- a/source/catalog.html
+++ b/source/catalog.html
@@ -77,7 +77,7 @@
       <p class="catalog__page-text">Каталог товаров</p>
       <div class="catalog__zigzag-icon">
         <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
-          <use xlink:href="img/sprite.svg#icon-zig-zag"></use>
+          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
     </div>
@@ -296,7 +296,7 @@
   <script src="js/picturefill.js"></script>
 
   <div style="display:none">
-    <include src="build/img/sprite.svg"></include>
+    <include src="source/img/sprite.svg"></include>
   </div>
 
 </body>
