--- a/source/index.html
+++ b/source/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="handwork__zigzag-icon">
         <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
-          <use xlink:href="img/sprite.svg#icon-zig-zag"></use>
+          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
     </section>
@@ -170,7 +170,7 @@
       </div>
       <div class="baskets__line-icon">
         <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
-          <use xlink:href="img/sprite.svg#icon-zigzag-line"></use>
+          <use xlink:href="img/sprite.svg#icon-bg-zigzag-line"></use>
         </svg>
       </div>
     </section>
@@ -258,7 +258,7 @@
       </div>
       <div class="reviews__line-icon">
         <svg class="svg-icon svg-icon__zigzag-line" width="100%" height="23px">
-          <use xlink:href="img/sprite.svg#icon-zigzag-line"></use>
+          <use xlink:href="img/sprite.svg#icon-bg-zigzag-line"></use>
         </svg>
       </div>
     </section>
@@ -389,7 +389,7 @@
   <script src="js/picturefill.js"></script>
 
   <div style="display:none">
-    <include src="build/img/sprite.svg"></include>
+    <include src="source/img/sprite.svg"></include>
   </div>
 
 </body>
