--- a/20/catalog.html
+++ b/20/catalog.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Мишка - каталог: HTML Academy</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <base href="https://htmlacademy-adaptive.github.io/976089-mishka-18/20/">
 </head>
 
