--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
     <div class="catalog__title-page">
       <p class="catalog__page-text">Каталог товаров</p>
       <div class="catalog__zigzag-icon">
-        <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
+        <svg class="svg-icon svg-icon__zigzag" width="1150" height="34">
           <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
@@ -291,9 +291,9 @@
   </section>
 
   <!-- Скрипты -->
-  <script src="js/menu.js"></script>
-  <script src="js/modal.js"></script>
-  <script src="js/picturefill.js"></script>
+  <script src="js/min-js/menu.js"></script>
+  <script src="js/min-js/modal.js"></script>
+  <script src="js/min-js/picturefill.js"></script>
 
   <div style="display:none">
     <include src="source/img/sprite.svg"></include>
