--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
     <div class="form__title-page">
       <p class="form__page-text">Вязание на заказ</p>
       <div class="form__zigzag-icon">
-        <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
+        <svg class="svg-icon svg-icon__zigzag" width="1150" height="34">
           <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
@@ -237,8 +237,8 @@
   </footer>
 
   <!-- Скрипты -->
-  <script src="js/menu.js"></script>
-  <script src="js/picturefill.js"></script>
+  <script src="js/min-js/menu.js"></script>
+  <script src="js/min-js/picturefill.js"></script>
 
   <div style="display:none">
     <include src="source/img/sprite.svg"></include>
