fixes include, fonts, gulpfile

--- a/source/form.html
+++ b/source/form.html
@@ -237,10 +237,10 @@
   </footer>
 
   <!-- Скрипты -->
-  <script src="js/min-js/menu.js"></script>
-  <script src="js/min-js/picturefill.js"></script>
+  <script src="js/menu.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
 
-  <div style="display:none">
+  <div style="display:none;">
     <include src="source/img/sprite.svg"></include>
   </div>
 
