--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
         </a>
       </div>
       <div class="handwork__zigzag-icon">
-        <svg class="svg-icon svg-icon__zigzag" width="1150" height="34">
+        <svg class="svg-icon svg-icon__zigzag" width="100%" height="34">
           <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
@@ -382,13 +382,13 @@
   </section>
 
   <!-- Скрипты -->
-  <script src="js/min-js/menu.js"></script>
-  <script src="js/min-js/modal.js"></script>
-  <script src="js/min-js/map.js"></script>
+  <script src="js/menu.min.js"></script>
+  <script src="js/modal.min.js"></script>
+  <script src="js/map.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/min-js/picturefill.js"></script>
+  <script src="js/picturefill.min.js"></script>
 
-  <div style="display:none">
+  <div style="display:none;">
     <include src="source/img/sprite.svg"></include>
   </div>
 
