fixes hover/active, mixin

--- a/source/form.html
+++ b/source/form.html
@@ -98,7 +98,7 @@
               <div class="form__interior">
                 <input class="form__input-check visually-hidden" id="interior" type="radio" name="type" value="interior"
                   checked>
-                <label class="form__style-text form__radio--indentation qqq" for="interior">
+                <label class="form__style-text form__radio--indentation" for="interior">
                   Аксессуар для интерьера
                 </label>
               </div>
